Сохранение тегов в файлы txt

--- a/BatchWork.ipynb
+++ b/BatchWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 167,
    "id": "342e2968-2eb6-49de-a534-e1172fb9d7bd",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,9 @@
     "    yolo_model_dir: Path = sp_field(default=\"./models/yolo/\")    # Для YOLO моделей\n",
     "    detectors_config: str = sp_field(default=\"detectors.json\")\n",
     "    output_file: str = sp_field(default=\"results.json\")\n",
+    "    save_txt: bool = sp_field(default=True)      # Сохранять ли теги в TXT файлы\n",
+    "    append_txt: bool = sp_field(default=True)    # Добавлять ли теги к существующим TXT файлам\n",
+    "\n",
     "\n",
     "\n",
     "def ensure_model_folder(folder_path: Path) -> Path:\n",
@@ -683,6 +686,72 @@
     "        \"image_path\": image_path\n",
     "    }\n",
     "\n",
+    "def save_tags_to_txt(image_path, merged_tags, append_tags=False):\n",
+    "    \"\"\"\n",
+    "    Сохраняет объединенные теги в TXT файл рядом с изображением.\n",
+    "    \n",
+    "    Args:\n",
+    "        image_path: Путь к изображению\n",
+    "        merged_tags: Словарь с объединенными тегами\n",
+    "        append_tags: Если True, добавляет новые теги к существующим; иначе перезаписывает\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Путь к созданному/обновленному TXT файлу\n",
+    "    \"\"\"\n",
+    "    # Получаем путь для TXT файла (заменяем расширение на .txt)\n",
+    "    txt_path = os.path.splitext(image_path)[0] + \".txt\"\n",
+    "    \n",
+    "    # Получаем список тегов из объединенных результатов\n",
+    "    # Используем taglist, где теги разделены пробелами (без подчеркиваний)\n",
+    "    tags_to_save = merged_tags[\"taglist\"].split(\", \")\n",
+    "    \n",
+    "    # Если нужно добавить к существующим тегам\n",
+    "    if append_tags and os.path.exists(txt_path):\n",
+    "        try:\n",
+    "            # Читаем существующие теги\n",
+    "            with open(txt_path, 'r', encoding='utf-8') as f:\n",
+    "                existing_content = f.read().strip()\n",
+    "                \n",
+    "            # Разделяем существующие теги (они могут быть разделены запятыми, запятыми с пробелами, или новыми строками)\n",
+    "            if \", \" in existing_content:\n",
+    "                existing_tags = [tag.strip() for tag in existing_content.split(\", \")]\n",
+    "            elif \",\" in existing_content:\n",
+    "                existing_tags = [tag.strip() for tag in existing_content.split(\",\")]\n",
+    "            else:\n",
+    "                existing_tags = [tag.strip() for tag in existing_content.split(\"\\n\") if tag.strip()]\n",
+    "            \n",
+    "            # Объединяем старые и новые теги, убираем дубликаты\n",
+    "            existing_tags_set = set(existing_tags)\n",
+    "            new_tags = [tag for tag in tags_to_save if tag not in existing_tags_set]\n",
+    "            \n",
+    "            # Если есть новые теги для добавления\n",
+    "            if new_tags:\n",
+    "                all_tags = existing_tags + new_tags\n",
+    "                # Сортируем теги для удобства\n",
+    "                all_tags.sort()\n",
+    "                \n",
+    "                # Сохраняем обновленный список\n",
+    "                with open(txt_path, 'w', encoding='utf-8') as f:\n",
+    "                    f.write(\", \".join(all_tags))\n",
+    "                \n",
+    "                print(f\"Добавлено {len(new_tags)} новых тегов в {txt_path}\")\n",
+    "            else:\n",
+    "                print(f\"Новых тегов не обнаружено для {txt_path}\")\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"Ошибка при добавлении тегов к {txt_path}: {e}\")\n",
+    "            # В случае ошибки создадим новый файл с тегами\n",
+    "            with open(txt_path, 'w', encoding='utf-8') as f:\n",
+    "                f.write(\", \".join(tags_to_save))\n",
+    "            print(f\"Создан новый файл с тегами: {txt_path}\")\n",
+    "    else:\n",
+    "        # Просто создаем новый файл с тегами\n",
+    "        with open(txt_path, 'w', encoding='utf-8') as f:\n",
+    "            f.write(\", \".join(tags_to_save))\n",
+    "        print(f\"Создан файл с тегами: {txt_path}\")\n",
+    "    \n",
+    "    return txt_path\n",
+    "\n",
     "\n",
     "def BatchTagging(opts: ScriptOptions):\n",
     "    if opts.model not in MODEL_REPO_MAP:\n",
@@ -770,10 +839,23 @@
     "            \n",
     "            # Объединяем теги из всех источников\n",
     "            merged_tags = merge_tags_from_regions(result, detectors)\n",
-    "            all_merged_results.append({\n",
+    "            \n",
+    "            # Добавляем информацию о результатах для текущего изображения\n",
+    "            merged_result = {\n",
     "                \"image_path\": result[\"image_path\"],\n",
     "                \"merged_tags\": merged_tags\n",
-    "            })\n",
+    "            }\n",
+    "            all_merged_results.append(merged_result)\n",
+    "            \n",
+    "            # Если включена опция сохранения в TXT, сохраняем теги в отдельный файл\n",
+    "            if opts.save_txt:\n",
+    "                txt_path = save_tags_to_txt(\n",
+    "                    result[\"image_path\"], \n",
+    "                    merged_tags, \n",
+    "                    append_tags=opts.append_txt\n",
+    "                )\n",
+    "                # Добавляем путь к TXT файлу в результаты\n",
+    "                merged_result[\"txt_path\"] = txt_path\n",
     "            \n",
     "            # Выводим информацию о результатах\n",
     "            print(\"--------\")\n",
@@ -797,6 +879,14 @@
     "            print(\"\\nОбъединенные теги:\")\n",
     "            print(f\"Описание: {merged_tags['caption']}\")\n",
     "            print(f\"Теги: {merged_tags['taglist']}\")\n",
+    "            \n",
+    "            # Если сохранили в TXT, показываем информацию\n",
+    "            if opts.save_txt:\n",
+    "                if opts.append_txt:\n",
+    "                    print(f\"Теги добавлены/обновлены в: {merged_result['txt_path']}\")\n",
+    "                else:\n",
+    "                    print(f\"Теги сохранены в: {merged_result['txt_path']}\")\n",
+    "            \n",
     "            print(\"--------\")\n",
     "    \n",
     "    print(f\"\\nОбработка завершена. Обработано изображений: {len(all_results)}/{total_images}\")\n",
@@ -859,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 169,
    "id": "0fa20c7a-b7f4-4bc6-a443-70ee5d003af2",
    "metadata": {},
    "outputs": [],
@@ -877,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 171,
    "id": "f50154f4-bf2e-40ad-bfb0-bdbb27851b0a",
    "metadata": {
     "scrolled": true
@@ -887,7 +977,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Не удалось загрузить pytorch_model.bin: 404 Client Error. (Request ID: Root=1-67c67089-4acd57926e691e5c508ab4a1;eba01d7b-cad9-4316-8721-350735fc59c6)\n",
+      "Не удалось загрузить pytorch_model.bin: 404 Client Error. (Request ID: Root=1-67c67cf5-55cc9e2726d2cb9a6d5b1231;04a72d4f-2ccc-4aa3-ad69-85e484138a64)\n",
       "\n",
       "Entry Not Found for url: https://huggingface.co/SmilingWolf/wd-eva02-large-tagger-v3/resolve/main/pytorch_model.bin.\n",
       "Файл config.json уже существует в models\\taggers\\wd-eva02-large-tagger-v3\n",
@@ -907,11 +997,12 @@
       "\n",
       "Обработка изображения 1/4: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png: 640x160 4 persons, 12.5ms\n",
-      "Speed: 1.5ms preprocess, 12.5ms inference, 3.2ms postprocess per image at shape (1, 3, 640, 160)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png: 640x160 4 persons, 13.2ms\n",
+      "Speed: 1.6ms preprocess, 13.2ms inference, 2.8ms postprocess per image at shape (1, 3, 640, 160)\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png: 640x160 7 faces, 15.3ms\n",
-      "Speed: 1.4ms preprocess, 15.3ms inference, 2.4ms postprocess per image at shape (1, 3, 640, 160)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png: 640x160 7 faces, 15.6ms\n",
+      "Speed: 1.7ms preprocess, 15.6ms inference, 2.6ms postprocess per image at shape (1, 3, 640, 160)\n",
+      "Создан файл с тегами: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.txt\n",
       "--------\n",
       "Путь к изображению: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.png\n",
       "\n",
@@ -959,15 +1050,17 @@
       "Объединенные теги:\n",
       "Описание: 1girl, :<, :o, age_progression, back, bare_legs, bare_shoulders, barefoot, black_dress, black_ribbon, black_sailor_collar, black_skirt, blonde_hair, blood, blue_skirt, blurry, blurry_background, blurry_foreground, blush, blush_stickers, book, border, chromatic_aberration, clone, closed_mouth, collarbone, collared_shirt, depth_of_field, doughnut, dress, dual_persona, eye_reflection, eyelashes, feet, feet_out_of_frame, film_grain, flipped_hair, food, foreshortening, from_behind, frown, green_eyes, grey_background, hand_on_own_chest, hand_up, holding, indoors, legs, long_hair, long_legs, looking_at_viewer, looking_back, looking_to_the_side, mary_janes, multiple_girls, multiple_persona, multiple_views, navel, neck_ribbon, no_socks, open_mouth, oshino_shinobu, outdoors, parted_lips, person, petite, pleated_skirt, pointy_ears, railing, ribbon, sailor_collar, school_uniform, serafuku, shadow, shiny_skin, shirt, shirt_tucked_in, shoes, short_sleeves, sidelocks, sitting, sitting_on_stairs, skirt, sleeveless, slit_pupils, smile, stairs, standing, straight_hair, strap_slip, sunlight, suspender_skirt, suspenders, suspenders_slip, swept_bangs, tears, toenails, toes, vampire, very_long_hair, white_border, white_shirt, yellow_eyes\n",
       "Теги: 1girl, :<, :o, age progression, back, bare legs, bare shoulders, barefoot, black dress, black ribbon, black sailor collar, black skirt, blonde hair, blood, blue skirt, blurry, blurry background, blurry foreground, blush, blush stickers, book, border, chromatic aberration, clone, closed mouth, collarbone, collared shirt, depth of field, doughnut, dress, dual persona, eye reflection, eyelashes, feet, feet out of frame, film grain, flipped hair, food, foreshortening, from behind, frown, green eyes, grey background, hand on own chest, hand up, holding, indoors, legs, long hair, long legs, looking at viewer, looking back, looking to the side, mary janes, multiple girls, multiple persona, multiple views, navel, neck ribbon, no socks, open mouth, oshino shinobu, outdoors, parted lips, person, petite, pleated skirt, pointy ears, railing, ribbon, sailor collar, school uniform, serafuku, shadow, shiny skin, shirt, shirt tucked in, shoes, short sleeves, sidelocks, sitting, sitting on stairs, skirt, sleeveless, slit pupils, smile, stairs, standing, straight hair, strap slip, sunlight, suspender skirt, suspenders, suspenders slip, swept bangs, tears, toenails, toes, vampire, very long hair, white border, white shirt, yellow eyes\n",
+      "Теги добавлены/обновлены в: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test1.txt\n",
       "--------\n",
       "\n",
       "Обработка изображения 2/4: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png: 640x448 1 person, 11.9ms\n",
-      "Speed: 5.4ms preprocess, 11.9ms inference, 4.7ms postprocess per image at shape (1, 3, 640, 448)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png: 640x448 1 person, 13.1ms\n",
+      "Speed: 2.8ms preprocess, 13.1ms inference, 3.5ms postprocess per image at shape (1, 3, 640, 448)\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png: 640x448 1 face, 14.5ms\n",
-      "Speed: 3.5ms preprocess, 14.5ms inference, 3.4ms postprocess per image at shape (1, 3, 640, 448)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png: 640x448 1 face, 11.9ms\n",
+      "Speed: 5.1ms preprocess, 11.9ms inference, 5.0ms postprocess per image at shape (1, 3, 640, 448)\n",
+      "Создан файл с тегами: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.txt\n",
       "--------\n",
       "Путь к изображению: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.png\n",
       "\n",
@@ -988,15 +1081,17 @@
       "Объединенные теги:\n",
       "Описание: 1girl, ass_visible_through_thighs, bandaid, bandaid_on_knee, bandaid_on_leg, bangle, black_headwear, blonde_hair, blue_background, blush, blush_stickers, body_blush, bracelet, breasts, closed_mouth, coat, collarbone, contrapposto, crossed_arms, dress, fang, fang_out, feet_out_of_frame, flat_chest, frown, hat, jacket, jacket_on_shoulders, jewelry, jolly_roger, katana, legs_apart, long_hair, looking_at_viewer, looking_to_the_side, military_hat, military_jacket, open_clothes, oshino_shinobu, peaked_cap, person, petite, pirate_hat, planted, planted_sword, pointy_ears, shiny_skin, shirt, short_dress, simple_background, skin_fang, skull_and_crossbones, small_breasts, solo, standing, sword, thighs, v-shaped_eyebrows, very_long_hair, weapon, white_dress, yellow_eyes\n",
       "Теги: 1girl, ass visible through thighs, bandaid, bandaid on knee, bandaid on leg, bangle, black headwear, blonde hair, blue background, blush, blush stickers, body blush, bracelet, breasts, closed mouth, coat, collarbone, contrapposto, crossed arms, dress, fang, fang out, feet out of frame, flat chest, frown, hat, jacket, jacket on shoulders, jewelry, jolly roger, katana, legs apart, long hair, looking at viewer, looking to the side, military hat, military jacket, open clothes, oshino shinobu, peaked cap, person, petite, pirate hat, planted, planted sword, pointy ears, shiny skin, shirt, short dress, simple background, skin fang, skull and crossbones, small breasts, solo, standing, sword, thighs, v-shaped eyebrows, very long hair, weapon, white dress, yellow eyes\n",
+      "Теги добавлены/обновлены в: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test2.txt\n",
       "--------\n",
       "\n",
       "Обработка изображения 3/4: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png: 640x640 (no detections), 14.8ms\n",
-      "Speed: 5.2ms preprocess, 14.8ms inference, 3.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png: 640x640 (no detections), 15.7ms\n",
+      "Speed: 8.7ms preprocess, 15.7ms inference, 2.8ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png: 640x640 9 faces, 11.3ms\n",
-      "Speed: 5.8ms preprocess, 11.3ms inference, 3.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png: 640x640 9 faces, 15.9ms\n",
+      "Speed: 5.3ms preprocess, 15.9ms inference, 3.0ms postprocess per image at shape (1, 3, 640, 640)\n",
+      "Создан файл с тегами: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.txt\n",
       "--------\n",
       "Путь к изображению: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.png\n",
       "\n",
@@ -1038,15 +1133,17 @@
       "Объединенные теги:\n",
       "Описание: 6+girls, :<, :d, albino, androgynous, black_background, black_eyes, black_hair, blonde_hair, blue_eyes, blue_hair, blunt_bangs, blush, blush_stickers, bow, brown_eyes, brown_hair, child, closed_mouth, collared_shirt, dark-skinned_female, dark-skinned_male, dark_skin, demon_girl, dress, expressionless, fang, forked_eyebrows, frown, genderswap, genderswap_(mtf), green_eyes, grey_eyes, hair_ornament, hat, helmet, hime_cut, horns, hug, kurodani_yamame, long_hair, looking_at_viewer, maid_headdress, multicolored_eyes, multiple_girls, no_mouth, no_nose, open_mouth, orange_hair, personification, pointy_ears, profile, purple_scarf, red_eyes, ringed_eyes, school_uniform, short_hair, simple_background, slit_pupils, smile, star_hair_ornament, style_parody, thick_eyebrows, vampire, white_hair, yellow_eyes\n",
       "Теги: 6+girls, :<, :d, albino, androgynous, black background, black eyes, black hair, blonde hair, blue eyes, blue hair, blunt bangs, blush, blush stickers, bow, brown eyes, brown hair, child, closed mouth, collared shirt, dark-skinned female, dark-skinned male, dark skin, demon girl, dress, expressionless, fang, forked eyebrows, frown, genderswap, genderswap (mtf), green eyes, grey eyes, hair ornament, hat, helmet, hime cut, horns, hug, kurodani yamame, long hair, looking at viewer, maid headdress, multicolored eyes, multiple girls, no mouth, no nose, open mouth, orange hair, personification, pointy ears, profile, purple scarf, red eyes, ringed eyes, school uniform, short hair, simple background, slit pupils, smile, star hair ornament, style parody, thick eyebrows, vampire, white hair, yellow eyes\n",
+      "Теги добавлены/обновлены в: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test3.txt\n",
       "--------\n",
       "\n",
       "Обработка изображения 4/4: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png: 384x640 2 persons, 14.0ms\n",
-      "Speed: 2.7ms preprocess, 14.0ms inference, 3.8ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png: 384x640 2 persons, 17.1ms\n",
+      "Speed: 2.5ms preprocess, 17.1ms inference, 4.3ms postprocess per image at shape (1, 3, 384, 640)\n",
       "\n",
-      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png: 384x640 (no detections), 14.4ms\n",
-      "Speed: 3.6ms preprocess, 14.4ms inference, 2.0ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "image 1/1 C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png: 384x640 (no detections), 15.3ms\n",
+      "Speed: 2.5ms preprocess, 15.3ms inference, 2.2ms postprocess per image at shape (1, 3, 384, 640)\n",
+      "Создан файл с тегами: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.txt\n",
       "--------\n",
       "Путь к изображению: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.png\n",
       "\n",
@@ -1067,6 +1164,7 @@
       "Объединенные теги:\n",
       "Описание: 1boy, 1girl, ahoge, araragi_koyomi, back, black_hair, blonde_hair, blurry, blush_stickers, brother_and_sister, chair, crossed_arms, depth_of_field, dress, facing_away, from_behind, indian_style, letterboxed, long_hair, long_legs, looking_at_viewer, oshino_shinobu, person, sandals, shadow, short_hair, shorts, sitting, skirt, sundress, topless_male, white_dress, white_skirt, yellow_eyes\n",
       "Теги: 1boy, 1girl, ahoge, araragi koyomi, back, black hair, blonde hair, blurry, blush stickers, brother and sister, chair, crossed arms, depth of field, dress, facing away, from behind, indian style, letterboxed, long hair, long legs, looking at viewer, oshino shinobu, person, sandals, shadow, short hair, shorts, sitting, skirt, sundress, topless male, white dress, white skirt, yellow eyes\n",
+      "Теги добавлены/обновлены в: C:\\Users\\liali\\YoloWdTagger\\wdv3-timm\\TestPic\\test4.txt\n",
       "--------\n",
       "\n",
       "Обработка завершена. Обработано изображений: 4/4\n",
